--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/node": "^20.0.0"
   },
   "scripts": {
     "dev": "vite",
