fix: Add vite/client types to tsconfig for import.meta.env support
Add 'vite/client' to the types array in tsconfig.json to provide TypeScript with proper type definitions for import.meta.env.

This resolves the build error: "Property 'env' does not exist on type 'ImportMeta'"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "types": ["node"],
-    "jsx": "react-jsx"
+    "types": ["vite/client", "node"],    "jsx": "react-jsx"
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
